# eventlistener-win

./: CMakeLists.txt  MonitorableUIAutoEvents.h  README.md  focuschangedeventhandler.cpp  focuschangedeventhandler.h  generaleventshandler.cpp  generaleventshandler.h  main.cpp  wineventlistener.cpp  wineventlistener.h
